# learns

./: readme.md
LearnOpenGL/: .gitignore  CMakeLists.txt  readme.md
LearnOpenGL/0-Gettings-Started/Coordinate/: main.cc  main_advance.cc  texture_advance.vs
LearnOpenGL/0-Gettings-Started/Hello-Triangle/: 1-two-triangles.cc
LearnOpenGL/0-Gettings-Started/Shaders/: 0-triangle.cc  1-changing-color-triangle.cc
LearnOpenGL/0-Gettings-Started/Textures/: 0-container.cc  texture.fs
LearnOpenGL/0-Gettings-Started/Transformations/: 0-1-container.cc  1-2-container-rotate-scale.cc
LearnOpenGL/0-Gettings-Started/camera/base/: main.cc
LearnOpenGL/0-Gettings-Started/camera/class/: main.cc
LearnOpenGL/0-Gettings-Started/camera/mouse/: main.cc  readme.md
LearnOpenGL/1-Lighting/Colors/: main.cc  object.vs
LearnOpenGL/3rd-libs/: main.cpp
LearnOpenGL/configuration/: root_directory.h.in
LearnOpenGL/glad/include/glad/: glad.h
LearnOpenGL/glad/src/: glad.c
LearnOpenGL/include/: filesystem.h  model.h
LearnOpenGL/src/1.Gettings_Started/Coordinate/: main.cc  main_advance.cc
LearnOpenGL/src/1.Gettings_Started/Hello-Triangle/: 1-two-triangles.cc  2-two-vaos.cc  3_two_vaos_two_shaders.cc
LearnOpenGL/src/1.Gettings_Started/Textures/: 0-container-face.cc
LearnOpenGL/src/1.Gettings_Started/Transformations/: 0-1-container.cc  1-2-container-rotate-scale.cc  texture.fs
LearnOpenGL/src/1.Gettings_Started/camera/base/: main.cc  readme.md
LearnOpenGL/src/1.Gettings_Started/camera/class/: main.cc
LearnOpenGL/src/1.Gettings_Started/camera/mouse/: main.cc
LearnOpenGL/src/2.Lighting/Colors/: main.cc  object.fs
LearnOpenGL/src/3.Model_Loading/: main.cc
LearnOpenGL/src/4.Advanced_OpenGL/Blending/: main.cc
LearnOpenGL/src/4.Advanced_OpenGL/Blending_sort/: main.cc
LearnOpenGL/src/4.Advanced_OpenGL/DepthTesting/: main.cc
LearnOpenGL/src/4.Advanced_OpenGL/FrameBuffers/: framebuffer.fs  main.cc  test.cc
LearnOpenGL/src/4.Advanced_OpenGL/StencilTesting/: main.cc  single_color.fs
OpenCV/: learn-ai-on-colab-Classifying Hand Written Digits.ipynb  learn-ai-on-colab-House Prices_ EDA2ML.ipynb  learn-ai-on-colab-State Farm Driver Distraction.ipynb  learn-ai-on-colab-pilot Distraction prediction.ipynb  learn-ai.ipynb  learn-opencv.ipynb  requirements.txt
OpenCV/data/: countries_of_the_world.csv  health_data.csv
PySide6/: learnpyside6.pyproject  main.py  readme.md
PySide6/MainModule/: Main.qml  app.qrc  icons.qrc  qmldir
PySide6/MainModule/qml/: BlueBox.qml  learn_qml_listview.qml  learn_qml_listview_model_action.qml  learn_qml_repeater.qml  learn_qml_state_transition.qml
jpeg_encoder/: .gitignore  CMakeLists.txt  bitstr.h  lenna_yuv444.yuv  main.c  readme.md  tiny_jpeg.h
jpeg_encoder/include/: bitstr.h  dct.h
